--- a/src/Components/Navbar/Nav.css
+++ b/src/Components/Navbar/Nav.css
@@ -8,7 +8,8 @@
   padding: 1rem 1.5rem;
   width: 100%;
   z-index: 1000;
-  transition: background-color 0.3s ease; /* Smooth transition for background change */
+  transition: background-color 0.3s ease;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* Light line at the bottom */
 }
 /* .navbar.scrolled {
   background-color: rgb(0, 0, 0);
