--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,10 @@
 .footer-container {
-    color: var(--foreground-color, #000);
-    padding: 4%;
-    
-  }
+  color: var(--foreground-color, #000);
+  padding: 4%;
+  
+  
+ /* Ensure it stays above other content */
+}
   
   .footer-grid {
     margin-left: 13%;
