--- a/src/Components/Cart/Non-Empty/Nonempty.css
+++ b/src/Components/Cart/Non-Empty/Nonempty.css
@@ -17,8 +17,11 @@
 }
 
 .final{
+    margin: auto;
     display: flex;
-   justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 80%;
 }
 .counter{
     display: flex;
