--- a/src/Components/Cart/Non-Empty/Productcart.css
+++ b/src/Components/Cart/Non-Empty/Productcart.css
@@ -1,13 +1,10 @@
-.card {
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
+.card2 {  
+    padding: 30px;
     background-color: #fff;
-    border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   }
   
-  .card-header {
+  .card2-header {
     display: flex;
     align-items: center;
     margin-bottom: 16px;
@@ -40,16 +37,19 @@
   .quantity-controls {
     display: flex;
     align-items: center;
+    gap: 2rem;
+    border: 1px solid #cecece;
+    margin-right: 1%;
   }
   
   .button {
-    padding: 8px;
+    padding: 8px 16px;
+    background-color: #f0f0f0;
     border: none;
-    background-color: #3d3d3d;
     border-radius: 4px;
     cursor: pointer;
-    margin: 0 4px;
   }
+  
   
   .button:hover {
     background-color: #e0e0e0;
