--- a/src/Components/Cart/Non-Empty/Nonemptyfooter.css
+++ b/src/Components/Cart/Non-Empty/Nonemptyfooter.css
@@ -33,7 +33,7 @@
     background-color: #000;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    font-weight: bold;
     font-size: 16px;
     cursor: pointer;
     transition: transform 0.3s ease;
@@ -41,6 +41,6 @@
   
   .checkout-button:hover {
    
-    transform: scale(1.1);
+    transform: scale(1.03);
 
   }
