--- a/src/Components/Collection/Card/Card.css
+++ b/src/Components/Collection/Card/Card.css
@@ -1,29 +1,29 @@
-.card-container {
+/* .card-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Ensure 2 cards per row */
-    gap: 10px;
+    grid-template-columns: repeat(2, 1fr); 
     justify-content: center;
     padding: 20px;
-    margin-top: 20px; /* Add margin to create gap from above container */
-  }
+    margin-top: 20px; 
+  } */
   
-  .card {
+  .card1 {
     overflow: hidden;
-    transition: transform 0.2s;
-    max-width: 20%;
-    margin: 40px auto;
+    width: 40vw;
+    height: 80vh;
+    margin: .1rem;
   }
   
-  .card:hover {
-    transform: scale(1.05);
-  }
+
   
   .card-image {
     width: 100%;
-    height: auto;
+    height: 60vh;
     cursor: pointer;
+    transition: transform 0.2s;
   }
-  
+  .card-image:hover {
+    transform: scale(1.02); /* Apply the hover effect to the image */
+}
   .card-content {
     padding: 16px;
     text-align: center;
