--- a/src/Components/Collection/CollectionCont.css
+++ b/src/Components/Collection/CollectionCont.css
@@ -1,7 +1,7 @@
 .collection-container {
-    min-height: 40vh;
-    width: 100%;
-    background-color: white;
+    margin-top:3% ;
+    background-color: rgb(255, 255, 255);
     display: flex;
+   
   }
   
