--- a/src/Components/HomePage/Home.css
+++ b/src/Components/HomePage/Home.css
@@ -8,12 +8,13 @@
 
 /* Video container */
 .VideoContainer {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%; /* Matches parent height for consistency */
-    z-index: 0; /* Place video behind all content */
+    z-index: -1; /* Place video behind all content */
+    overflow: hidden;
 }
 
 /* Video styling */
