--- a/src/Components/Collection/CollectionCont.css
+++ b/src/Components/Collection/CollectionCont.css
@@ -1,9 +1,9 @@
 .collection-container {
   position: relative;
   z-index: 1;
-    margin-top:3% ;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    padding: 1%;
-  }
-  
+  padding: 3rem 1rem;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+
+}
+
