--- a/src/Components/Navbar/Nav.css
+++ b/src/Components/Navbar/Nav.css
@@ -4,7 +4,7 @@
   position: fixed; /* Changed from sticky to fixed for consistent behavior */
   top: 0;
   left: 0;
-  background-color: transparent; /* Start with transparent background */
+  background-color: white; /* Start with transparent background */
   padding: 1rem 1.5rem;
   width: 100%;
   z-index: 1000;
@@ -65,10 +65,10 @@
    width: 12rem; /* Adjust as needed */
    background-color: white;
    border: 1px solid #E5E7EB; /* Gray-300 */
-   border-radius: 0.375rem; /* Rounded-md */
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
    padding: 0.5rem 0;
    z-index: 50;
+   font-family: 'Times New Roman', Times, serif;
  }
  
  .dropdown-item {
