fixed responsive ness
adjusted according to the devices

--- a/src/Components/Collection/Card/Card.css
+++ b/src/Components/Collection/Card/Card.css
@@ -9,8 +9,8 @@
   .card1 {
     overflow: hidden;
     width: 40vw;
-    height: 80vh;
-    margin: .1rem;
+    height: 75vh;
+   
   }
   
   .card1 {
@@ -32,28 +32,14 @@
     padding: 10px;
   }
   
-  .product-title {
-   
-    margin: 1%;
+  .product-tit {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: black ;
   }
   
-  .product-price {
+  .product-pri {
     color: #888;
-    font-size: 1.2em;
+    font-size: 1rem;
     margin: 8px 0 0;
-  }
-  
-  @media (max-width: 600px) {
-    .card-container {
-      grid-template-columns: 1fr; /* Stack cards on smaller screens */
-    }
-  
-    .product-title {
-      font-size: 1.2em;
-    }
-  
-    .product-price {
-      font-size: 1em;
-    }
+    font-weight: bold;
   }
