--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,8 +2,7 @@
   color: var(--foreground-color, #000);
   padding: 4%;
   background-color: white;
-  
-  
+  min-height: 20vh;  
  /* Ensure it stays above other content */
 }
   
