--- a/src/Components/HomePage/Home.css
+++ b/src/Components/HomePage/Home.css
@@ -8,7 +8,7 @@
 
 /* Video container */
 .VideoContainer {
-    position: fixed;
+    position: absolute; /* Changed from fixed to absolute */
     top: 0;
     left: 0;
     width: 100%;
@@ -43,7 +43,8 @@
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .MainDiv {  
-      height: 100vh; /* Use full height on smaller screens */
+        height: 80vh; /* Use full height on smaller screens */
+        width: 100%;
     }
 
     .VideoBackground {
