--- a/frontend/src/Components/Cart/Non-Empty/Nonempty.css
+++ b/frontend/src/Components/Cart/Non-Empty/Nonempty.css
@@ -1,7 +1,7 @@
 .cart-page-container {
-    padding: 2rem 4rem;
+    padding: 2rem 1rem;
     max-width: 1400px;
-    margin: 60px auto 0;
+    margin: 8rem auto 0;
     min-height: 80vh;
 }
 
