--- a/frontend/src/Components/Cart/Non-Empty/Nonempty.css
+++ b/frontend/src/Components/Cart/Non-Empty/Nonempty.css
@@ -2,6 +2,7 @@
     padding: 2rem 1rem;
     max-width: 1400px;
     margin: 8rem auto 0;
+    /* margin-top: -0.1rem;    */
     min-height: 80vh;
 }
 
